@@ -1,5 +1,6 @@
 0.3 -
  * keys.db is now encrypted with AES256 (passphrase supplied by user)
+ * moved aam parser from rfc822 module to email module
 
 0.2 - Oct. 8, 2013
  * encoDHer now decrypts unicode strings properly
